# stab

./: .cz.toml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.cargo/: audit.toml
.github/workflows/: audit.yml  ci.yml
assets/: demo.tape
src/: errors.rs  lib.rs  main.rs
src/cli/: data.rs  mod.rs
src/display/: mod.rs  table.rs
src/io/: mod.rs  reader.rs
tests/: integration_test.rs
tests/fixtures/: sample.csv
