[package]
name = "stab"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
comfy-table = "7.2.2"
polars = { version = "0.53.0", features = ["csv", "lazy", "dtype-full", "json"] }
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
